objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>BUFocus__c</fullName>
        <label>BU Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All Business Units</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Type__c</fullName>
        <formula>IF(Synchronize_With_Marketo__c = 1 , &apos;SMA&apos;, &apos;Non Marcom&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOFDefaultedassignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOF Defaulted assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_DOFDassignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOF_Deactivate_assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field related to Digital Opportunity Factory users, and the defaulted assignee will be the “DOF defaulted assignee” for this Campaign.</inlineHelpText>
        <label>DOF Deactivate assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Chat_ID__c</fullName>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Mail_ID__c</fullName>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFocus__c</fullName>
        <label>Product Focus</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Synchronize_With_Marketo__c</fullName>
        <description>MKT March 2018 : A new field created for Marketo to sync Campaign.</description>
        <label>Synchronize With Marketo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetedCountries__c</fullName>
        <label>Targeted Countries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_CampaignNameUnique__c</fullName>
        <externalId>true</externalId>
        <label>Tech_CampaignNameUnique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AR_Non_Marcom_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CampaignLeader__c</columns>
        <columns>BUFocus__c</columns>
        <columns>ProductFocus__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>TargetedCountries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>CO,Colombia</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CO - Non Marcom Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANC_CCC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_campaigns3</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <label>All campaigns</label>
    </listViews>
    <listViews>
        <fullName>BE_Non_Marcom_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>TargetedCountries__c</columns>
        <columns>CampaignLeader__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>BUFocus__c</columns>
        <columns>ProductFocus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>BE</value>
        </filters>
        <label>BE Non Marcom Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CS_Service_Bureau_Campaign_View</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>CS</value>
        </filters>
        <label>CS _ Service Bureau Campaign View</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_INDUSTRY</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CampaignLeader__c</columns>
        <columns>BUFocus__c</columns>
        <columns>ProductFocus__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>TargetedCountries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BUFocus__c</field>
            <operation>equals</operation>
            <value>Industry,ID</value>
        </filters>
        <filters>
            <field>CampaignLeader__c</field>
            <operation>equals</operation>
            <value>Pablo Christian MARTIN</value>
        </filters>
        <label>Campaigns INDUSTRY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DK_Non_MarCom_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>DK</value>
        </filters>
        <label>DK Non MarCom Campaigns</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>FS_INIBS_Energy_RU</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>TargetedCountries__c</columns>
        <columns>CampaignLeader__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>BUFocus__c</columns>
        <columns>ProductFocus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CampaignLeader__c</field>
            <operation>equals</operation>
            <value>Tarek Nazim</value>
        </filters>
        <label>RU-IBS-FS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Finland_non_marcom_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>FI-</value>
        </filters>
        <label>Finland non-marcom Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>FI_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Basso_campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CampaignLeader__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>TargetedCountries__c</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>it</value>
        </filters>
        <label>IT Basso campaign</label>
        <language>en_US</language>
        <sharedTo>
            <group>IT_Central_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Basso_campaign1</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>TargetedCountries__c</columns>
        <columns>CampaignLeader__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>BUFocus__c</columns>
        <columns>ProductFocus__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>IT Basso campaign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Install_Base_Services_Leads</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>IBS</value>
        </filters>
        <label>Install Base Services Leads</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ID</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NO_All_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>NO</value>
        </filters>
        <label>NO - All Active Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>NOAllUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Marcom_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Marketo</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Non Marcom Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Spain_Campaign</fullName>
        <columns>CampaignLeader__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>ProductFocus__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>BUFocus__c</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Global__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>SP,PT</value>
        </filters>
        <label>Spain &amp; Portugal Campaign</label>
        <language>en_US</language>
        <sharedTo>
            <group>ESUsers</group>
        </sharedTo>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>CAM_VR_SEP19MKT01_EOFAssignee</fullName>
        <active>true</active>
        <description>Created to make DOF Defaulted assignee field conditionally mandatory based on DOF Deactivate assignment.</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c),DOF_Deactivate_assignment__c,ISBLANK(DOFDefaultedassignee__c))</errorConditionFormula>
        <errorDisplayField>DOFDefaultedassignee__c</errorDisplayField>
        <errorMessage>DOF defaulted assignee is mandatory for this Campaign</errorMessage>
    </validationRules>
</CustomObject>